# HmumuClassifier_ZH2l

./: .gitignore  common_tools.py  eval.py  pyproject.toml  test.py
artifacts/: best_params_per_fold.json  metrics_blind.json  metrics_oof.json
configs/: run_config_hmumu_zh2l.json  run_config_hmumu_zh2l_simple.json
notebooks/: test.ipynb
scripts/: evaluate_saved_xgb_models.py  plot_features_from_root.py  train_cv.py  train_xgb_cv_from_root.py  tune_xgb.py
src/eventclf/: __init__.py
src/eventclf/config/: __init__.py  schema.py
src/eventclf/data/: __init__.py  dataset.py  splits.py
src/eventclf/eval/: __init__.py  metrics.py  report.py  slices.py
src/eventclf/io/: __init__.py  root_reader.py
src/eventclf/model/: __init__.py  base.py  xgb_cv.py  xgb_rotating_fold.py  xgb_rotating_simple.py
src/eventclf/monitoring/: __init__.py  drift.py  feature_checks.py  plots.py
src/eventclf/plotting/: __init__.py  metrics.py
src/eventclf/tuning/: objective.py  search_spaces.py  tuner.py
src/eventclf/utils/: __init__.py  hash.py  io.py  logging.py  random.py
tests/: test_build_data.py  test_eval_metrics.py  test_monitoring.py  test_regression_metrics.py  test_schema.py  test_utils.py
